15 using tsoa mongodb controllers work (#18)
* Creating user established for backend

* CRUD methods for users have been added

* User Controller updated, modules Get requests finished

* delete Module, update Module completed

* Fixed Authentication with JWT, needs testing, need to start on quiz data

* Bug Fix for error authentication

* Authorisation Completed with adjustments to Subsection

* Added changes to userService
